--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#disable Hibernate automatic schema creation
+spring.jpa.hibernate.ddl-auto=none
+#script-based initialization is performed by default only for embedded databases
+#to always initialize a database using scripts
+spring.sql.init.mode=always
+#chane path map to solve swagger 2
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
